# noisekit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  skills-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml
noisekit/: __init__.py  cli.py  dataset.py  noise_cache.py  pipeline.py  scoring.py  transforms.py
noisekit/presets/: bad_audio_encoding.yaml  clean_reference.yaml  clipping.yaml  clipping_distortion.yaml  clipping_telecom.yaml  dropout_noisy.yaml  low_bitrate.yaml  noise.yaml  noise_reverb.yaml  noise_telecom.yaml  noisy_environment.yaml  noisy_telecom.yaml  reverb.yaml  reverb_far_field.yaml  reverb_noisy.yaml  telecom.yaml  telecommunication.yaml  transmission_dropout.yaml
tests/: test_smoke.py
